# kalshi-event-risk-desk

./: .gitignore  CMakeLists.txt  README.md
config/: example.env
include/analytics/: alert_engine.h  feature_engine.h  models.h
include/kalshi/: kalshi_client.h  kalshi_signer.h
include/server/: http_server.h
include/storage/: sqlite_store.h
include/utils/: base64.h  env.h  http_client.h
src/: main.cpp
src/analytics/: alert_engine.cpp  feature_engine.cpp
src/kalshi/: kalshi_client.cpp  kalshi_signer.cpp
src/server/: http_server.cpp
src/storage/: sqlite_store.cpp
src/utils/: base64.cpp  env.cpp  http_client.cpp
ui/: app.js  index.html  styles.css
